--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -55,6 +55,8 @@ nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
                 a(href='http://adezzlive:6006',target="_blank") 推荐细节
             li
                 a(href='#',data-toggle="modal",data-target="#myModal") 帮助
+            li
+                a(href='/statistic') 资讯
 
     //- 帮助界面的模态框
 #myModal.modal.fade(tabindex="-1",role="dialog",aria-labelledby="myModalLabel",aria-hidden="true")
