与当前运行细节保持一致

--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -52,7 +52,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             li
                 a(href='/author') 关于本站
             li
-                a(href='http://adezzlive:6006',target="_blank") 推荐细节
+                a(href='http://47.102.143.249:6006',target="_blank") 推荐细节
             li
                 a(href='#',data-toggle="modal",data-target="#myModal") 帮助
             li
